@@ -1,7 +1,10 @@
 package de.noctivag.skyblock.gui;
+
+import de.noctivag.skyblock.SkyblockPlugin;
+import de.noctivag.skyblock.SkyblockPlugin;
 import org.bukkit.inventory.ItemStack;
 
-import de.noctivag.skyblock.Plugin;
+import de.noctivag.skyblock.SkyblockPlugin;
 import de.noctivag.skyblock.achievements.AchievementSystem;
 import de.noctivag.skyblock.achievements.AchievementDefinition;
 import de.noctivag.skyblock.achievements.AchievementCategory;
@@ -11,16 +14,17 @@ import org.bukkit.inventory.meta.ItemMeta;
 import net.kyori.adventure.text.Component;
 
 import java.util.*;
+import java.util.stream.Collectors;
 
 public class EnhancedAchievementGUI extends CustomGUI {
-    private final SkyblockPlugin plugin;
+    private final SkyblockPlugin SkyblockPlugin;
     private final Player player;
     private final AchievementSystem achievementSystem;
     private String currentCategory = "all";
 
-    public EnhancedAchievementGUI(SkyblockPlugin plugin, Player player) {
+    public EnhancedAchievementGUI(SkyblockPlugin SkyblockPlugin, Player player) {
         super(54, Component.text("§6§lAchievements"));
-        this.plugin = plugin;
+        this.SkyblockPlugin = SkyblockPlugin;
         this.player = player;
         // Placeholder - method not implemented
         this.achievementSystem = null;
@@ -152,7 +156,7 @@ public class EnhancedAchievementGUI extends CustomGUI {
         if (meta != null) {
             meta.displayName(Component.text(name));
             if (lore.length > 0) {
-                meta.lore(Arrays.stream(lore).map(Component::text).toList());
+                meta.lore(java.util.Arrays.stream(lore).map(Component::text).collect(java.util.stream.Collectors.toList()));
             }
             item.setItemMeta(meta);
         }
