@@ -1,7 +1,10 @@
 package de.noctivag.skyblock.gui;
+
+import de.noctivag.skyblock.SkyblockPlugin;
+import de.noctivag.skyblock.SkyblockPlugin;
 import org.bukkit.inventory.ItemStack;
 
-import de.noctivag.skyblock.Plugin;
+import de.noctivag.skyblock.SkyblockPlugin;
 import de.noctivag.skyblock.items.PetItemSystem;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
@@ -14,15 +17,15 @@ import java.util.Arrays;
 import java.util.List;
 
 public class PetItemGUI extends CustomGUI {
-    private final SkyblockPlugin plugin;
+    private final SkyblockPlugin SkyblockPlugin;
     private final Player player;
     private final PetItemSystem petItemSystem;
 
-    public PetItemGUI(SkyblockPlugin plugin, Player player) {
+    public PetItemGUI(SkyblockPlugin SkyblockPlugin, Player player) {
         super(54, Component.text("§d§l🐾 Pet Item System 🐾").color(NamedTextColor.LIGHT_PURPLE).decorate(TextDecoration.BOLD));
-        this.plugin = plugin;
+        this.SkyblockPlugin = SkyblockPlugin;
         this.player = player;
-        this.petItemSystem = (PetItemSystem) plugin.getPetItemSystem(); // Cast from Object
+        this.petItemSystem = (PetItemSystem) SkyblockPlugin.getPetItemSystem(); // Cast from Object
         setupItems();
     }
 
@@ -311,7 +314,7 @@ public class PetItemGUI extends CustomGUI {
         if (meta != null) {
             meta.displayName(Component.text(name));
             if (lore.length > 0) {
-                meta.lore(Arrays.stream(lore).map(Component::text).toList());
+                meta.lore(java.util.Arrays.stream(lore).map(Component::text).collect(java.util.stream.Collectors.toList()));
             }
             item.setItemMeta(meta);
         }
