@@ -1,7 +1,10 @@
 package de.noctivag.skyblock.gui;
+
+import de.noctivag.skyblock.SkyblockPlugin;
+import de.noctivag.skyblock.SkyblockPlugin;
 import org.bukkit.inventory.ItemStack;
 
-import de.noctivag.skyblock.Plugin;
+import de.noctivag.skyblock.SkyblockPlugin;
 import de.noctivag.skyblock.items.PotatoBookSystem;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
@@ -14,13 +17,13 @@ import java.util.Arrays;
 import java.util.List;
 
 public class PotatoBookGUI extends CustomGUI {
-    private final SkyblockPlugin plugin;
+    private final SkyblockPlugin SkyblockPlugin;
     private final Player player;
     private final PotatoBookSystem potatoBookSystem;
 
-    public PotatoBookGUI(SkyblockPlugin plugin, Player player) {
+    public PotatoBookGUI(SkyblockPlugin SkyblockPlugin, Player player) {
         super(54, Component.text("§6§l🥔 Potato Book System 🥔").color(NamedTextColor.GOLD).decorate(TextDecoration.BOLD));
-        this.plugin = plugin;
+        this.SkyblockPlugin = SkyblockPlugin;
         this.player = player;
         this.potatoBookSystem = null; // PotatoBookSystem not implemented yet
         setupItems();
@@ -208,7 +211,7 @@ public class PotatoBookGUI extends CustomGUI {
         if (meta != null) {
             meta.displayName(Component.text(name));
             if (lore.length > 0) {
-                meta.lore(Arrays.stream(lore).map(Component::text).toList());
+                meta.lore(java.util.Arrays.stream(lore).map(Component::text).collect(java.util.stream.Collectors.toList()));
             }
             item.setItemMeta(meta);
         }
