@@ -1,7 +1,10 @@
 package de.noctivag.skyblock.gui;
+
+import de.noctivag.skyblock.SkyblockPlugin;
+import de.noctivag.skyblock.SkyblockPlugin;
 import org.bukkit.inventory.ItemStack;
 
-import de.noctivag.skyblock.Plugin;
+import de.noctivag.skyblock.SkyblockPlugin;
 import de.noctivag.skyblock.items.RecombobulatorSystem;
 import org.bukkit.Material;
 import org.bukkit.entity.Player;
@@ -14,13 +17,13 @@ import java.util.Arrays;
 import java.util.List;
 
 public class RecombobulatorGUI extends CustomGUI {
-    private final SkyblockPlugin plugin;
+    private final SkyblockPlugin SkyblockPlugin;
     private final Player player;
     private final RecombobulatorSystem recombobulatorSystem;
 
-    public RecombobulatorGUI(SkyblockPlugin plugin, Player player) {
+    public RecombobulatorGUI(SkyblockPlugin SkyblockPlugin, Player player) {
         super(54, Component.text("§d§l🔮 Recombobulator 3000 🔮").color(NamedTextColor.LIGHT_PURPLE).decorate(TextDecoration.BOLD));
-        this.plugin = plugin;
+        this.SkyblockPlugin = SkyblockPlugin;
         this.player = player;
         this.recombobulatorSystem = null; // RecombobulatorSystem not implemented yet
         setupItems();
@@ -279,7 +282,7 @@ public class RecombobulatorGUI extends CustomGUI {
         if (meta != null) {
             meta.displayName(Component.text(name));
             if (lore.length > 0) {
-                meta.lore(Arrays.stream(lore).map(Component::text).toList());
+                meta.lore(java.util.Arrays.stream(lore).map(Component::text).collect(java.util.stream.Collectors.toList()));
             }
             item.setItemMeta(meta);
         }
